[package]
name = "reducer"
version = "0.1.0"
authors = ["Aaron Weiss <awe@pdgn.co>", "Daniel Patterson <dbp@dbpmail.net>"]
edition = "2018"

[dependencies]
pretty = "0.5"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }